# TouchController-Monorepo

./: .bazelignore  .bazelrc  .buildifier.tables.json  .clang-format  .gitattributes  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  NEWS-en.md  NEWS-zh.md  README.md  build.gradle.kts  gradle.properties  maven_install.json  modrinth_lock.json  neoforge_pin.txt  neoform_pin.txt  properties.bzl  release.sh  repin_all.sh  settings.gradle.kts
.devcontainer/: Dockerfile  (+1 more)
armorstand/: BUILD.bazel  NEWS-en.md  NEWS-zh.md  maven_install.json  properties.bzl
armorstand/client/: BUILD.bazel
armorstand/client/resources/: armorstand.mixins.client.json
armorstand/expect_client/: BUILD.bazel
armorstand/fabric_client/: BUILD.bazel
armorstand/fabric_main/: BUILD.bazel
armorstand/game/: BUILD.bazel  armorstand.accesswidener
armorstand/main/: BUILD.bazel
armorstand/neoforge_client/: BUILD.bazel
armorstand/neoforge_main/: BUILD.bazel
blazerod/: BUILD.bazel  maven_install.json  properties.bzl  publish_maven.sh
blazerod/example/ball_block/: BUILD.bazel
blazerod/model/example-models/bedrock-test/: model.json
blazerod/model/example-models/bedrock-test/animations/: main.animation.json
blazerod/model/example-models/bedrock-test/models/: main.json
blazerod/model/model-assimp/: AssimpLoader.kt  BUILD.bazel
blazerod/model/model-base/: Accessor.kt  BUILD.bazel
blazerod/model/model-base/animation/: AnimationContext.kt
blazerod/model/model-base/util/: ByteUtil.kt
blazerod/model/model-bedrock/: BUILD.bazel  BedrockModelJsonLoader.kt  BedrockModelLoader.kt
blazerod/model/model-bedrock/molang/binding/: ContextProperty.kt
blazerod/model/model-formats/: BUILD.bazel  ModelFileLoaders.kt
blazerod/model/model-gltf/: BUILD.bazel  GltfBinaryLoader.kt  GltfLoader.kt  GltfTextLoader.kt
blazerod/model/model-gltf/format/: Gltf.kt
blazerod/model/model-gltf/format/extension/: VrmExtension.kt  VrmSpringBoneExtension.kt
blazerod/model/model-gltf/test/: BUILD.bazel  GlbLoadTest.kt
blazerod/model/model-loader/: BUILD.bazel  LoadContext.kt  LoadParam.kt  LoadResult.kt  MetadataResult.kt  ModelFileLoader.kt  ThumbnailResult.kt
blazerod/model/model-loader/util/: FileUtil.kt  MMDScale.kt  MathUtil.kt  ReadUtil.kt
blazerod/model/model-pmd/: BUILD.bazel  PmdLoader.kt
blazerod/model/model-pmx/: BUILD.bazel  PmxLoader.kt
blazerod/model/model-pmx/test/: BUILD.bazel
blazerod/model/model-vmd/: BUILD.bazel  VmdLoader.kt
blazerod/render/: BUILD.bazel
blazerod/render/api/animation/: AnimationContexts.kt
blazerod/render/api/resource/: ModelInstance.kt
blazerod/render/fabric/: BUILD.bazel  BlazeRodFabric.kt
blazerod/render/main/: BUILD.bazel
blazerod/render/main/extension/: BUILD.bazel  NativeImageExt.kt  RenderPassExt.java  RenderPassExt.kt
blazerod/render/main/layout/: LayoutStrategy.kt
blazerod/render/main/mixin/: BUILD.bazel  MinecraftClientAccessor.java  RenderSystemMixin.java
blazerod/render/main/render/: BUILD.bazel  BlazerodVertexFormats.kt  GpuIndexBuffer.kt
blazerod/render/main/resources/: blazerod.mixins.json
blazerod/render/main/runtime/: BUILD.bazel  ModelInstanceImpl.kt  RenderSceneImpl.kt
blazerod/render/main/systems/: BUILD.bazel  ComputePipeline.java
blazerod/render/neoforge/: BUILD.bazel  BlazeRodNeoForge.kt
combine/widget/: BUILD.bazel  Button.kt  CheckBoxButton.kt  DropDownMenu.kt  EditText.kt  Icon.kt  IconButton.kt  Slider.kt  Switch.kt
combine/widget/item/: BUILD.bazel
fastmerger/: BUILD.bazel  Main.java
fastmerger/bindeps/: BindepsConstants.java  BindepsConstraints.java  BindepsReader.java  BindepsWriter.java
fastmerger/classdeps/: BUILD.bazel  ClassDependenciesVisitor.java
fastmerger/collector/: BUILD.bazel  DependenciesCollector.java
fastmerger/depmap/: BUILD.bazel  DependencyMap.java
fastmerger/pkgdeps/: PkgDepsVisitor.java
fastmerger/reader/: Reader.java
fastmerger/scanner/: BUILD.bazel  ScannerWorker.java
fastmerger/scanner/classdeps/: ClassDepsScanner.java  ClassInfoVisitor.java  ClassNameMap.java
fastmerger/scanner/pathmap/: PathMap.java
fastmerger/symbolmap/: BUILD.bazel  SymbolMap.java
game/1.20.6/: BUILD.bazel  maven_install_fabric.json
game/1.21/: BUILD.bazel  maven_install_fabric.json
game/1.21.10/: BUILD.bazel  maven_install_fabric.json
game/1.21.6/: BUILD.bazel  maven_install_fabric.json
game/1.21.9/: BUILD.bazel  maven_install_fabric.json
mod/: BUILD.bazel
mod/1.21.4/neoforge-1.21.4/: gradle.properties
mod/1.21.5/common-1.21.5/: build.gradle.kts  gradle.properties
mod/1.21.5/fabric-1.21.5/: build.gradle.kts  gradle.properties
mod/1.21.5/forge-1.21.5/: build.gradle.kts  gradle.properties
mod/1.21.5/neoforge-1.21.5/: build.gradle.kts  gradle.properties
mod/common/: build.gradle.kts
mod/common-1.21-1.21.1/: build.gradle.kts
mod/common-1.21-1.21.4/: build.gradle.kts
mod/common-1.21.3-1.21.4/: build.gradle.kts
mod/common-1.21.3-1.21.5/: build.gradle.kts
mod/common-1.21.x/: build.gradle.kts
mod/common-fabric/: rules.pro
mod/common-forge/: rules.pro
mod/resources/: build.gradle.kts
mod/src/client/resources/: armorstand.mixins.client.json
mod/src/main/resources/: fabric.mod.json
module/: android.MODULE.bazel  armorstand.MODULE.bazel  blazerod.MODULE.bazel  combine.MODULE.bazel  fabric.MODULE.bazel  iris.MODULE.bazel  llvm-mingw.MODULE.bazel  mdbook.MODULE.bazel  minecraft.MODULE.bazel  modrinth.MODULE.bazel  neoforge.MODULE.bazel  rules.MODULE.bazel  rust.MODULE.bazel  sodium.MODULE.bazel  touchcontroller.MODULE.bazel
proxy-linux/: CMakeLists.txt  Containerfile  build.gradle.kts
proxy-linux/src/: wayland.cpp  wayland.hpp
proxy-linux/toolchain/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  i386-linux-gnu.cmake  x86_64-linux-gnu.cmake
proxy-windows/: CMakeLists.txt  Containerfile  build.gradle.kts
proxy-windows/src/: input.cpp  input.hpp  lib-legacy.cpp  lib-legacy.hpp  lib.cpp  lib.hpp  protocol.hpp  winver.hpp
proxy-windows/toolchain/: aarch64-w64-mingw32.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
toolchain/: BUILD.bazel
(+1167 files in other folders)
