load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@//rule:extract_update_log.bzl", "extract_update_log")
load("//:properties.bzl", "mod_version")
load("@rules_java//java:defs.bzl", "java_plugin")

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@rules_kotlin//kotlin/compiler:kotlinx-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    visibility = ["//visibility:public"],
    exported_compiler_plugins = [":serialization_plugin"],
    exports = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    jvm_target = "21",
    api_version = "2.0",
    language_version = "2.0",
)

extract_update_log(
    name = "update_log",
    visibility = ["//visibility:public"],
    version = mod_version,
    inputs = [
        "NEWS-zh.md",
        "NEWS-en.md",
    ],
)
