"TouchController module file"

module(
    name = "touchcontroller",
    version = "0.3.1-alpha",
)

bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_lib", version = "3.0.0-rc.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "rules_rust_mdbook", version = "0.67.0")

include("//module:rust.MODULE.bazel")
include("//module:mdbook.MODULE.bazel")

include("//module:minecraft.MODULE.bazel")
include("//module:rules.MODULE.bazel")

include("//module:neoforge.MODULE.bazel")
include("//module:fabric.MODULE.bazel")

include("//module:sodium.MODULE.bazel")
include("//module:iris.MODULE.bazel")
include("//module:modrinth.MODULE.bazel")

include("//module:blazerod.MODULE.bazel")
include("//module:armorstand.MODULE.bazel")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Kotlin
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.4.0",

        # Combine
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.1.20",
        "org.jetbrains.compose.runtime:runtime:1.7.1",
        "org.jetbrains.compose.runtime:runtime-saveable:1.7.1",
        "org.mini2Dx:universal-tween-engine:6.3.3",

        # Graphics
        "org.joml:joml:1.10.5",
        "it.unimi.dsi:fastutil:8.5.15",

        # Swing
        "org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.10.1",

        # Testing
        "org.jetbrains.kotlin:kotlin-test-junit5:2.1.10",
        "org.junit.jupiter:junit-jupiter-api:5.12.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.2",
        "org.junit.platform:junit-platform-suite-api:1.12.2",
        "org.junit.platform:junit-platform-suite-engine:1.12.2",
        "org.junit.platform:junit-platform-console:1.12.2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://maven.fabricmc.net/",
        "https://maven.neoforged.net/releases",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
