load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "fastmerger",
    srcs = glob(["*.java"]),
    main_class = "top.fifthlight.fastmerger.Main",
    deps = [
        "//fastmerger/classdeps",
        "//fastmerger/collector",
        "//fastmerger/symbolmap",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:org_ow2_asm_asm",
    ],
)
